# eegnet

./: .gitignore  README.md  config.py  data_loader.py  data_loading.py  data_viz.ipynb  dataset.py  eegnet.py  main.py  new_eegnet.py  preprocessing.py  pyproject.toml  splits.py  train.ipynb  train.py  visualize.py
